@@ -3,6 +3,7 @@ Revision history for beacon2-ri-tools
 2.0.7  2025-XX-XX
 
     - Moved 'browser/web' to 'utils/bff_browser/static/assets'
+    - Added argument '-projectdir-override' to enable external assignment of id (e.g., Celery)
 
 2.0.6  2025-01-15
     - Created a Flask app for 'utils/bff_browser' (currently in development)
